=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.2.x CA
 - Changed: Finalised "Add GEDFact_assistant/MEDIA/ sub module and core files. -  Still Link removals to do. -  (windmillway)
 - Changed: More changes to GEDFact_assistant/MEDIA/ sub module and core files (windmillway)
 - Changed: More minor changes to GEDFact_assistant/MEDIA/ submodule (windmillway)
 - Merged: Merge changes r5487 - r5508 from the trunk. (windmillway)
 - Changed: progressed further with GEDFact_assistant/MEDIA/ submodule
 - Merged: Merge changes r5468 - r5486 from the trunk. (windmillway)
 - Changed: Correct Paste-back links for Media add links (after svn 5424 autocomplete change)
 - Changed: More tidying up of GED_Fact module. (windmillway)
 - Merged: Merge changes r5423 - r5467 from the trunk. (windmillway)
 - Changed: Tidied up naming conventions for GED_Fact module (windmillway)
 - Added: MEDIA Add/Remove Links GUI functions (Not finished yet) (windmillway)
 - Merged: Merge changes r5367 - r5422 from the trunk. (windmillway)
 - Merged: Merge changes r5331 - r5366 from the trunk. (windmillway)
 - Merged: Merge changes r5324 - r5330 from the trunk. (4.2.1 Release level) (windmillway)
 - Fixed: Undefined Variable ERROR in logfiles (windmillway)
 - ROLL-BACK: Merged changes r5324 - r5351 from the trunk. (catastrophic errors) (windmillway)
 - Merged: Merge changes r5324 - r5351 from the trunk. (windmillway)
 - Added: List of linked indis for edit CENSUS page (Not finished yet) (windmillway)
 - Merged: Merge changes r5275 - r5323 from the trunk. (windmillway)
 - Changed: Tidied up a few more Navigator married names (Still Step Families to do)(windmillway)
 - Merged: Merge changes r5245 - r5274 from the trunk. (windmillway)