@@ -634,6 +634,11 @@ a:hover .nameZoom {
 	padding: 1px;
 }
 
+.submenuitem a, .submenuitem_rtl a, .submenuitem_hover a, .submenuitem_hover_rtl a {
+	display: inline-table;
+	vertical-align: middle;
+}
+
 .news_box {
 	background-image: url("images/redwhitegradiant2rev.gif");
 	background-repeat: repeat;
