@@ -577,6 +577,11 @@ a:hover .nameZoom {
 	padding: 1px;
 }
 
+.submenuitem a, .submenuitem_rtl a, .submenuitem_hover a, .submenuitem_hover_rtl a {
+	display: inline-table;
+	vertical-align: middle;
+}
+
 .news_box {
 	background-color: #d6e0ea;
 	border: solid #9ca3d4 1px;
